WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213137
REGRESSION (
r262618
): Very slow typing in a github issue
https://bugs.webkit.org/show_bug.cgi?id=213137
Summary
REGRESSION (r262618): Very slow typing in a github issue
Antti Koivisto
Reported
2020-06-12 10:20:39 PDT
unnecessary style resolutions
Attachments
patch
(3.80 KB, patch)
2020-06-12 10:28 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2020-06-12 10:20:51 PDT
<
rdar://problem/64214117
>
Antti Koivisto
Comment 2
2020-06-12 10:28:08 PDT
Created
attachment 401747
[details]
patch
EWS
Comment 3
2020-06-12 11:22:35 PDT
Committed
r262960
: <
https://trac.webkit.org/changeset/262960
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 401747
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug